              has been kept as a deprecated alias.
            - Now returns a shared_ptr instead of a raw pointer.
        Function smithNormalForm(), metricalSmithNormalForm():
            - The change of basis matrices no longer need to have the correct
              size (and may even be uninitialised) before they are passed in.
        Function stringToToken()
            - Replaced the two overloads with a single function that
              takes a std::string by value, for better move optimisation.
        Function tightEncode(), tightEncoding():
            - New global function to help with perfect hashes of different
              types of integers.
        Function torsionAutInverse():
            - Now returns a MatrixInt by value.
        Global constants base64Table, base64Spare:
            - Added to support the base64 encoding/decoding routines.
        Global constant packetTypeHolds<T>:
            - Added to support compile-time conversion from types held by
              packet wrappers to the corresponding packet type constants.
        Global arrays quadSeparating, quadMeeting, quadDefn, quadPartner,
                quadString:
            - These are all now inline constexpr.
        Global arrays triDiscArcs, quadDiscArcs, octDiscArcs:
            - These are all now inline constexpr.
            - For C++ users, these are no longer macros; instead they are
              once again genuine 2-D arrays.  Unfortunately this change is not
              backward compatible: you must now use foo[i][j], not foo(i,j).
              Python users are unaffected.
        Macro ENABLE_MEMBER_FOR_REGINA_INTEGER:
            - New macro for conditionally enabling or disabling member
              functions in template classes.
        Macro REGINA_PACKET:
            - No longer takes an initial class argument.
        Header packet/packetregistry.h, packet/packetregistry-impl.h:
            - Removed completely.